Back to single module

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,30 @@
 <resources>
     <string name="app_name">DionysusProject</string>
+    <string name="screen_route_events">Мероприятия</string>
+    <string name="screen_route_stats">Статистика</string>
+    <string name="screen_route_tasks">Задачи</string>
+    <string name="auth_login">Логин</string>
+    <string name="auth_password">Пароль</string>
+    <string name="auth_hint_login">Введите логин</string>
+    <string name="auth_hint_password">Введите пароль</string>
+    <string name="auth_login_btn">Войти</string>
+    <string name="auth_login_need_account">Нету аккаунта?</string>
+    <string name="auth_login_have_account">Есть аккаунт?</string>
+    <string name="auth_registration_btn">Зарегистрироваться</string>
+    <string name="auth_email">Введите Ваш E-mail</string>
+    <string name="auth_hint_email">E-mail</string>
+    <string name="logout">Выйти</string>
+    <string name="profile">Профиль</string>
+    <string name="profile_name">Имя</string>
+    <string name="profile_name_hint">Введите имя</string>
+    <string name="profile_date">Дата рождения</string>
+    <string name="profile_date_hint">Выберите дату рождения</string>
+    <string name="profile_work">Место работы</string>
+    <string name="profile_work_hint">Введите место работы</string>
+    <string name="profile_address">Адресс</string>
+    <string name="profile_address_hint">Введите адрес</string>
+    <string name="profile_about">О себе</string>
+    <string name="profile_about_hint">Введите информацию о себе</string>
+    <string name="save">Сохранить</string>
+    <string name="example">Example</string>
 </resources>
