--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">DionysusProject</string>
     <string name="budget">Бюджет</string>
+    <string name="add_author">Добавить автора</string>
+    <string name="add_responsible">Добавить ответственного</string>
+    <string name="add_tag">Добавить тэг</string>
     <string name="auth_login">Логин</string>
     <string name="auth_password">Пароль</string>
     <string name="auth_hint_login">Введите логин</string>
@@ -12,6 +15,14 @@
     <string name="auth_email">Введите Ваш E-mail</string>
     <string name="auth_hint_email">E-mail</string>
     <string name="event_description">Описание мероприятия</string>
+    <string name="tag">Тэг</string>
+    <string name="task_author">Название задачи</string>
+    <string name="task_name">Название задачи</string>
+    <string name="task_description">Описание задачи</string>
+    <string name="task_deadline">Дедлайн задачи</string>
+    <string name="task_description_hint">Введите описание</string>
+    <string name="task_name_hint">Введите название</string>
+    <string name="task_deadline_hint">Выберите дедлайн задачи</string>
     <string name="event_name">Название мероприятия</string>
     <string name="event_date">Дата мероприятия</string>
     <string name="event_location">Место проведения</string>
@@ -29,6 +40,7 @@
     <string name="profile_address_hint">Введите адрес</string>
     <string name="profile_about">О себе</string>
     <string name="profile_about_hint">Введите информацию о себе</string>
+    <string name="responsible_for_task">Ответственные за задачу</string>
     <string name="save">Сохранить</string>
     <string name="screen_route_events">Мероприятия</string>
     <string name="screen_route_stats">Статистика</string>
