--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="wrong_credentials">Неверные данные</string>
     <string name="empty_field">Заполните поля</string>
     <string name="all_budget">Весь бюджет: %1$s</string>
+    <string name="search_event">Найти мероприятие</string>
 </resources>
