Add delete button and repair pager

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">DionysusProject</string>
     <string name="budget">Бюджет</string>
+    <string name="add_author">Добавить автора</string>
+    <string name="add_responsible">Добавить ответственного</string>
+    <string name="add_task">Добавить задачу</string>
+    <string name="add_tag">Добавить тэг</string>
+    <string name="all_budget">Весь бюджет: %1$s</string>
     <string name="auth_login">Логин</string>
     <string name="auth_password">Пароль</string>
     <string name="auth_hint_login">Введите логин</string>
@@ -9,14 +14,33 @@
     <string name="auth_login_need_account">Нету аккаунта?</string>
     <string name="auth_login_have_account">Есть аккаунт?</string>
     <string name="auth_registration_btn">Зарегистрироваться</string>
+    <string name="average_urgency_task">Средная срочность</string>
+    <string name="delete">Удалить</string>
+    <string name="done">Выполнено</string>
+    <string name="empty_field">Заполните поля</string>
     <string name="event_description">Описание мероприятия</string>
+    <string name="graph_budget">Бюджет</string>
+    <string name="graph_status">Состояния</string>
+    <string name="tag">Тэг</string>
+    <string name="task_author">Автор задачи</string>
+    <string name="task_name">Название задачи</string>
+    <string name="task_description">Описание задачи</string>
+    <string name="task_deadline">Дедлайн задачи</string>
+    <string name="task_description_hint">Введите описание</string>
+    <string name="task_name_hint">Введите название</string>
+    <string name="task_deadline_hint">Выберите дедлайн задачи</string>
     <string name="event_name">Название мероприятия</string>
     <string name="event_date">Дата мероприятия</string>
     <string name="event_location">Место проведения</string>
     <string name="example">Example</string>
+    <string name="in_discussion">В обсуждении</string>
+    <string name="in_progress">Выполняется</string>
+    <string name="importance">Важность</string>
     <string name="logout">Выйти</string>
     <string name="manager">Организаторы</string>
-    <string name="reload">Обновить</string>
+    <string name="name">Название</string>
+    <string name="non_urgent_task">Несрочная задача</string>
+    <string name="open_graph">К статистике</string>
     <string name="profile">Профиль</string>
     <string name="profile_name">Имя</string>
     <string name="profile_name_hint">Введите имя</string>
@@ -28,16 +52,13 @@
     <string name="profile_address_hint">Введите адрес</string>
     <string name="profile_about">О себе</string>
     <string name="profile_about_hint">Введите информацию о себе</string>
+    <string name="responsible_for_task">Ответственные за задачу</string>
+    <string name="reload">Обновить</string>
     <string name="save">Сохранить</string>
+    <string name="search_event">Найти мероприятие</string>
     <string name="screen_route_events">Мероприятия</string>
     <string name="screen_route_stats">Статистика</string>
     <string name="screen_route_tasks">Задачи</string>
-    <string name="graph_budget">Бюджет</string>
-    <string name="graph_status">Состояния</string>
-    <string name="open_graph">К статистике</string>
-    <string name="open_tasks">К задачам</string>
+    <string name="urgent_task">Срочная задача</string>
     <string name="wrong_credentials">Неверные данные</string>
-    <string name="empty_field">Заполните поля</string>
-    <string name="all_budget">Весь бюджет: %1$s</string>
-    <string name="search_event">Найти мероприятие</string>
 </resources>
